# GPU-Control

./: CMakeLists.txt  LICENSE  gpu-control.cpp  gpu-control.desktop
